# retrieval-from-space

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: example_classification.yaml  example_regression.yaml  pseudonitzschia_cnn_classification.yaml  pseudonitzschia_environment_classification.yaml  pseudonitzschia_environment_classification_no_weights.yaml  pseudonitzschia_environment_classification_seed123.yaml  pseudonitzschia_environment_classification_seed7.yaml  pseudonitzschia_optics_classification.yaml  synthetic_end_to_end.yaml
configs/products/: mediterranean_products.yaml
docs/: gpu_setup.md
examples/synthetic/: README.md
src/: config.py  logging.py
src/data/: copernicus.py  data_utils.py  matchups.py  preprocessing.py  targets.py
src/features/: __init__.py  masks.py  temporal.py
src/metrics/: __init__.py  classification.py  metrics.py  metrics_clusters.py
src/models/: __init__.py  base.py  dense.py  factory.py  models.py  training.py  tree.py
src/pipeline/: __init__.py  common.py  download.py  evaluate.py  matchup.py  preprocess.py  run.py  train.py
src/retrieval_from_space/: __init__.py  config.py  paths.py  state.py
src/retrieval_from_space/data/: __init__.py  copernicus.py  matchups.py  preprocessing.py  targets.py
src/retrieval_from_space/examples/: __init__.py  synthetic.py
src/retrieval_from_space/features/: coordinates.py  transforms.py
src/retrieval_from_space/metrics/: classification.py  regression.py
src/retrieval_from_space/models/: cnn.py  factory.py  training.py  tree.py
tests/: test_config.py
(+7 files in other folders)
