[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retrieval-from-space"
version = "0.1.0"
description = "Config-driven Copernicus matchup, preprocessing, and model training toolkit."
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.1,<3",
  "xarray>=2023.11",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "tqdm>=4.67",
  "PyYAML>=6.0",
  "openpyxl>=3.1",
  "copernicusmarine>=2.0",
]

[project.optional-dependencies]
native-windows-gpu = [
  "keras==2.10.0; platform_system == 'Windows' and python_version < '3.11'",
  "tensorflow==2.10.1; platform_system == 'Windows' and python_version < '3.11'",
]
wsl2-gpu = [
  "tensorflow[and-cuda]>=2.16; platform_system == 'Linux'",
]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
